Added sending message from web tier

--- a/web-tier/src/main/resources/application.properties
+++ b/web-tier/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 server.port=3000
+
+aws.endpoint=
+aws.region=us-east-1
+
+aws.requestQueueUrl=https://sqs.us-east-1.amazonaws.com/124940588792/CSE546_Project1_Request
+aws.responseQueueUrl=https://sqs.us-east-1.amazonaws.com/124940588792/CSE546_Project1_Response
