--- a/web-tier/src/main/resources/application.properties
+++ b/web-tier/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 server.port=3000
 
-aws.endpoint=
 aws.region=us-east-1
 
 aws.requestQueueUrl=https://sqs.us-east-1.amazonaws.com/124940588792/CSE546_Project1_Request
 aws.responseQueueUrl=https://sqs.us-east-1.amazonaws.com/124940588792/CSE546_Project1_Response
+
+aws.access-key=AKIAR2FYKC34HDRIALXK
+aws.secret-key=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
