--- a/web-tier/src/main/resources/application.properties
+++ b/web-tier/src/main/resources/application.properties
@@ -5,5 +5,8 @@ aws.region=us-east-1
 aws.requestQueueUrl=https://sqs.us-east-1.amazonaws.com/124940588792/CSE546_Project1_Request
 aws.responseQueueUrl=https://sqs.us-east-1.amazonaws.com/124940588792/CSE546_Project1_Response
 
+aws.inputBucket=cse546-project1-input
+aws.outputBucket=cse546-project1-output
+
 aws.access-key=AKIAR2FYKC34HDRIALXK
 aws.secret-key=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
